          **only** the bug fixes and behavior changes I've made, I've imported 
          the Markdown test suite from MDTest1.1, and the MultiMarkdown test
          suite.
        - RT#36537 doc patch to add POD to the scripts from Debian's Gunnar 
          Wolf.
        - Mutilate the list processing somewhat to reduce the compilation
          of recursive regexes, and so stop perl (<5.10) crapping itself
          on lots of input. This isn't the full fix - really shouldn't be
          usng recursive regexes at all. RT#37297

1.0.21 2008-07-24T08:33:00
        - Fix hard tabs in Changelog
        - Add unit test for core dumps issue from RT#36203
        - Fix POD spelling.
        - Fix warning from RT#34856.
        - Add test for another tab width issue (related to <hr> generation)
          from RT#37769. Fix this issue.
        - More test additions and more splitting the test suites into MDTest 
          modules.

1.0.22 2008-10-23T18:24:44
        - RT#37909 - Fix + in email addresses.
        - RT#40303 - Fix use in Mason by adding "use re 'eval'" to both files.
        - Add SVN repository to Makefile.PL
        - Remove META.yml from source control so it is regenerated 
          automatically.

1.0.23 2008-11-02T18:24:30
        - Ship a release with the correct contents so that the tests pass.

1.0.24 2008-11-16T14:33:30
        - Add trust_list_start_value patch from Ricardo Signes (RT#40814)
          to enable <li value='X'> output for list numbering.
          This feature is disabled by default.

1.0.25 2009-08-25T09:31:30
        - Remove MultiMarkdown from the Text::Markdown distribution
        - Change repository and bugtracker metadata to github.
        - Update File::Slurp dependency, fixing RT#43888.

1.0.26 UNRELEASED
        - Minor POD changes (typos, wrapping)
        - Added note about and test for output always ending in exactly one newline
        - Fix RT#48943 + tests (genehack)
