@@ -212,6 +212,8 @@ This file documents the revision history for Perl extension Text::MultiMarkdown.
 
 1.0.26 UNRELEASED
         - Minor POD changes (typos, wrapping)
-        - Added note about and test for output always ending in exactly one newline
+        - Added note about and test for output always ending in exactly one newline (dandv)
         - Fix RT#48943 + tests (genehack)
+        + Support for optionally interpreting markdown in HTML block elements
+          using the markdown="1" attribute (GitHub issue #1; dandv)
 
